tests/baselines/reference/asyncFunctionDeclaration8_es6.errors.txt
tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration8_es6.ts(1,11): error TS9002: Computed property names are not currently supported.


==== tests/cases/conformance/async/es6/functionDeclarations/asyncFunctionDeclaration8_es6.ts (1 errors) ====
    var v = { [await]: foo }
              ~~~~~~~
!!! error TS9002: Computed property names are not currently supported.